// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer/routes/Accounts.tsx General should render itself & its children - dark mode 1`] = `
<div
  class="flex h-screen flex-col"
  data-testid="accounts"
>
  <div
    class="css-18bes35"
  >
    <div
      class="css-y272c0"
    >
      <div
        role="presentation"
      >
        <button
          class="css-1t6wxle"
          data-testid="header-nav-back"
          type="button"
        >
          <span
            class="css-1spmf3f"
          >
            <span
              aria-hidden="true"
              class="css-kxjlgc"
              style="color: currentColor;"
            >
              <svg
                class="css-1t4wpzr"
                fill="none"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <path
                  d="M15 8H2.25m4.5-5-5 5 5 5"
                  stroke="currentcolor"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
            <span
              class="css-b5o75w"
            >
              Go Back
            </span>
          </span>
        </button>
      </div>
      <h3
        class="css-rex7s6"
      >
        Accounts
      </h3>
    </div>
  </div>
  <div
    class="flex-grow overflow-x-auto px-8"
  >
    <div
      class="mt-4 flex flex-col text-sm gap-4"
    >
      <div
        class="css-74cmu6"
      >
        <div
          class="css-y272c0"
        >
          <div
            role="presentation"
          >
            <button
              aria-label="Open account profile"
              class="css-1vqst9f"
              data-testid="account-profile--itemInner"
              type="button"
            >
              <div
                aria-labelledby="uid14"
                role="img"
                style="display: inline-block; position: relative; outline: 0;"
              >
                <span
                  class="css-1lxbsnd"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    class="css-13ep12v"
                    data-ssr-placeholder-ignored="true"
                    data-vc="avatar-image"
                    src="https://avatar.atlassify.io"
                    style="border-radius: 50%;"
                  />
                </span>
                <span
                  hidden=""
                  id="uid14"
                >
                  Atlassify
                </span>
              </div>
              <div
                class="css-1orugy9"
              >
                <span
                  class="css-pbo52v"
                >
                  Atlassify
                </span>
                <span
                  class="css-km389f"
                >
                  user@atlassify.io
                </span>
              </div>
            </button>
          </div>
          <div
            class="css-1au07qt"
          >
            <div
              role="presentation"
            >
              <button
                class="css-1t6wxle"
                data-testid="account-refresh"
                type="button"
              >
                <span
                  class="css-1spmf3f"
                >
                  <span
                    aria-hidden="true"
                    class="css-kxjlgc"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-1t4wpzr"
                      fill="none"
                      role="presentation"
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M8.5 1.75c2 0 5.75 2.125 5.75 6.25s-4.24 6.24-4.24 6.24m-2.51.01c-2 0-5.75-2.125-5.75-6.25s4.26-6.26 4.26-6.26m.24 3.76V1.25H2m7.75 9.23v4.25H14"
                        stroke="currentcolor"
                        stroke-linejoin="round"
                        stroke-width="1.5"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-b5o75w"
                  >
                    Refresh user@atlassify.io
                  </span>
                </span>
              </button>
            </div>
            <div
              role="presentation"
            >
              <button
                class="css-1t6wxle"
                data-testid="account-logout"
                type="button"
              >
                <span
                  class="css-1spmf3f"
                >
                  <span
                    aria-hidden="true"
                    class="css-kxjlgc"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-1t4wpzr"
                      fill="none"
                      role="presentation"
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M8 1.75H3c-.69 0-1.25.56-1.25 1.25v10c0 .69.56 1.25 1.25 1.25h5M14.25 8H6m4.75-3.5 3.5 3.5-3.5 3.5"
                        stroke="currentcolor"
                        stroke-linejoin="round"
                        stroke-width="1.5"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-b5o75w"
                  >
                    Logout user@atlassify.io
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="css-156yo0n"
  >
    <div
      class="css-hugz22"
    >
      <div
        role="presentation"
      >
        <button
          class="css-1t6wxle"
          data-testid="account-add-new"
          type="button"
        >
          <span
            class="css-1spmf3f"
          >
            <span
              aria-hidden="true"
              class="css-kxjlgc"
              style="color: currentColor;"
            >
              <svg
                class="css-1t4wpzr"
                fill="none"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <path
                  d="M.75 15v-2.25a3 3 0 0 1 3-3h2.5a3 3 0 0 1 3 3V15M13 8V5m0 3v3m0-3h3m-3 0h-3M8.25 4a3.25 3.25 0 1 1-6.5 0 3.25 3.25 0 0 1 6.5 0Z"
                  stroke="currentcolor"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
            <span
              class="css-b5o75w"
            >
              Add new account
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/routes/Accounts.tsx General should render itself & its children - light mode 1`] = `
<div
  class="flex h-screen flex-col"
  data-testid="accounts"
>
  <div
    class="css-18bes35"
  >
    <div
      class="css-y272c0"
    >
      <div
        role="presentation"
      >
        <button
          class="css-1t6wxle"
          data-testid="header-nav-back"
          type="button"
        >
          <span
            class="css-1spmf3f"
          >
            <span
              aria-hidden="true"
              class="css-kxjlgc"
              style="color: currentColor;"
            >
              <svg
                class="css-1t4wpzr"
                fill="none"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <path
                  d="M15 8H2.25m4.5-5-5 5 5 5"
                  stroke="currentcolor"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
            <span
              class="css-b5o75w"
            >
              Go Back
            </span>
          </span>
        </button>
      </div>
      <h3
        class="css-rex7s6"
      >
        Accounts
      </h3>
    </div>
  </div>
  <div
    class="flex-grow overflow-x-auto px-8"
  >
    <div
      class="mt-4 flex flex-col text-sm gap-4"
    >
      <div
        class="css-swavor"
      >
        <div
          class="css-y272c0"
        >
          <div
            role="presentation"
          >
            <button
              aria-label="Open account profile"
              class="css-1vqst9f"
              data-testid="account-profile--itemInner"
              type="button"
            >
              <div
                aria-labelledby="uid4"
                role="img"
                style="display: inline-block; position: relative; outline: 0;"
              >
                <span
                  class="css-m9ooyq"
                >
                  <img
                    alt=""
                    aria-hidden="true"
                    class="css-13ep12v"
                    data-ssr-placeholder-ignored="true"
                    data-vc="avatar-image"
                    src="https://avatar.atlassify.io"
                    style="border-radius: 50%;"
                  />
                </span>
                <span
                  hidden=""
                  id="uid4"
                >
                  Atlassify
                </span>
              </div>
              <div
                class="css-1orugy9"
              >
                <span
                  class="css-pbo52v"
                >
                  Atlassify
                </span>
                <span
                  class="css-km389f"
                >
                  user@atlassify.io
                </span>
              </div>
            </button>
          </div>
          <div
            class="css-1au07qt"
          >
            <div
              role="presentation"
            >
              <button
                class="css-1t6wxle"
                data-testid="account-refresh"
                type="button"
              >
                <span
                  class="css-1spmf3f"
                >
                  <span
                    aria-hidden="true"
                    class="css-kxjlgc"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-1t4wpzr"
                      fill="none"
                      role="presentation"
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M8.5 1.75c2 0 5.75 2.125 5.75 6.25s-4.24 6.24-4.24 6.24m-2.51.01c-2 0-5.75-2.125-5.75-6.25s4.26-6.26 4.26-6.26m.24 3.76V1.25H2m7.75 9.23v4.25H14"
                        stroke="currentcolor"
                        stroke-linejoin="round"
                        stroke-width="1.5"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-b5o75w"
                  >
                    Refresh user@atlassify.io
                  </span>
                </span>
              </button>
            </div>
            <div
              role="presentation"
            >
              <button
                class="css-1t6wxle"
                data-testid="account-logout"
                type="button"
              >
                <span
                  class="css-1spmf3f"
                >
                  <span
                    aria-hidden="true"
                    class="css-kxjlgc"
                    style="color: currentColor;"
                  >
                    <svg
                      class="css-1t4wpzr"
                      fill="none"
                      role="presentation"
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M8 1.75H3c-.69 0-1.25.56-1.25 1.25v10c0 .69.56 1.25 1.25 1.25h5M14.25 8H6m4.75-3.5 3.5 3.5-3.5 3.5"
                        stroke="currentcolor"
                        stroke-linejoin="round"
                        stroke-width="1.5"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-b5o75w"
                  >
                    Logout user@atlassify.io
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="css-156yo0n"
  >
    <div
      class="css-hugz22"
    >
      <div
        role="presentation"
      >
        <button
          class="css-1t6wxle"
          data-testid="account-add-new"
          type="button"
        >
          <span
            class="css-1spmf3f"
          >
            <span
              aria-hidden="true"
              class="css-kxjlgc"
              style="color: currentColor;"
            >
              <svg
                class="css-1t4wpzr"
                fill="none"
                role="presentation"
                viewBox="0 0 16 16"
              >
                <path
                  d="M.75 15v-2.25a3 3 0 0 1 3-3h2.5a3 3 0 0 1 3 3V15M13 8V5m0 3v3m0-3h3m-3 0h-3M8.25 4a3.25 3.25 0 1 1-6.5 0 3.25 3.25 0 0 1 6.5 0Z"
                  stroke="currentcolor"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </span>
            <span
              class="css-b5o75w"
            >
              Add new account
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
